# coreason-sentinel

./: .pre-commit-config.yaml  AGENTS.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  vignette_coreason_sentinel.md
docs/: index.md  product_requirements.md  requirements.md  usage.md
src/coreason_identity/: models.py
src/coreason_sentinel/: __init__.py  circuit_breaker.py  drift_engine.py  drift_monitor.py  ingestor.py  interfaces.py  main.py  metric_store.py  mocks.py  models.py  spot_checker.py
src/coreason_sentinel/handlers/: otel_handler.py  veritas_handler.py
src/coreason_sentinel/utils/: logger.py  metric_extractor.py
tests/: test_api.py  test_circuit_breaker.py  test_circuit_breaker_health_report.py  test_circuit_breaker_none_context.py  test_circuit_breaker_percentiles.py  test_circuit_breaker_user.py  test_context.py  test_coverage_edge_cases.py  test_coverage_gap.py  test_coverage_gap_fill.py  test_drift_engine.py  test_drift_engine_relevance.py  test_drift_engine_zero.py  test_drift_monitor.py  test_identity.py  test_ingestor.py  test_ingestor_edge_cases.py  test_ingestor_otel.py  test_ingestor_otel_edge_cases.py  test_ingestor_otel_handler.py  test_ingestor_relevance.py  test_ingestor_user_context_edge_cases.py  test_ingestor_veritas_handler.py  test_main.py  test_metric_extractor.py  test_metric_store.py  test_mocks.py  test_models.py  test_models_edge_cases.py  test_output_drift.py  test_phoenix_integration_edge_cases.py  test_relevance_drift_edge_cases.py  test_retrieval_precision_scenarios.py  test_spot_checker.py  test_spot_checker_conditional.py  test_utils.py  test_utils_context.py
